Fix: visible dark webring icon in Webkit
Dark mode now switches to a different icon instead of
inverting it. There's probably a better way but I'll figure that out
later.

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -5,7 +5,7 @@
 	}
 
 	/* IndieWeb u-photo should be distinct from the background */
-	.dark-invert {
+	.u-photo {
 		-webkit-filter: invert(100%);
 		filter: invert(100%);
 	}
